Fix mobile link wrapping

--- a/src/components/Link/Link.module.scss
+++ b/src/components/Link/Link.module.scss
@@ -26,6 +26,7 @@
 
 .link {
     width: fit-content;
+    white-space: nowrap;
     font-size: 1.4rem;
     padding: 0.6rem 1.5rem;
     font-weight: bold;
